[gd_scene load_steps=11 format=3 uid="uid://twat68vd8dnc"]

[ext_resource type="Script" uid="uid://bdqu7by2vy1u6" path="res://menus/help/help.gd" id="1_a4low"]
[ext_resource type="Theme" uid="uid://dvkknqaldhwsk" path="res://menus/assets_themes/button_cancel_general.tres" id="2_acsg6"]
[ext_resource type="Theme" uid="uid://bebmaum0nxo2t" path="res://menus/assets_themes/settings_title_label.tres" id="2_h10xx"]
[ext_resource type="Texture2D" uid="uid://bueoed61eci0q" path="res://menus/assets_textures/arrow_button_l_alt.png" id="5_blt6l"]
[ext_resource type="PackedScene" uid="uid://bd3jxko5kcdnq" path="res://menus/noisy_buttons/noisy_texture_button/noisy_texture_button.tscn" id="5_bs6y8"]
[ext_resource type="Texture2D" uid="uid://dcoo2lt8pxgkn" path="res://menus/assets_textures/arrow_button_r_alt.png" id="7_bs6y8"]
[ext_resource type="Texture2D" uid="uid://d2r0yshvqy6hc" path="res://menus/assets_textures/arrow_button_l_focus.png" id="7_yfsh2"]
[ext_resource type="Theme" uid="uid://d326nye68tuyp" path="res://menus/assets_themes/help_menu_text.tres" id="8_bs6y8"]
[ext_resource type="Texture2D" uid="uid://clcosfdya4cnp" path="res://menus/assets_textures/arrow_button_r_focus.png" id="9_tcuxl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acsg6"]
bg_color = Color(0.0235294, 0.172549, 0.239216, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="Help" type="CanvasLayer"]
script = ExtResource("1_a4low")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 72
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 72
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_acsg6")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LeftButton" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_bs6y8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../RightButton")
focus_neighbor_bottom = NodePath("../../../../../BackButton")
texture_normal = ExtResource("5_blt6l")
texture_pressed = ExtResource("7_yfsh2")
texture_hover = ExtResource("7_yfsh2")
texture_focused = ExtResource("7_yfsh2")
button_type = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_h10xx")
text = "HOW TO PLAY"

[node name="RightButton" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_bs6y8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_neighbor_left = NodePath("../LeftButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../../../../BackButton")
texture_normal = ExtResource("7_bs6y8")
texture_pressed = ExtResource("9_tcuxl")
texture_hover = ExtResource("9_tcuxl")
texture_focused = ExtResource("9_tcuxl")

[node name="BasicsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="Label1" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
text = "It's plain old pong!"

[node name="Text1" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
text = "Move your paddle to repel incoming balls before they slip past!
You score a point if a ball leaves the arena from behind your opponent.  
Reach the target score* first to win!"
fit_content = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
text = "...Or is it?"

[node name="Text2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "Watch out! A new ball will spawn every [b]5 seconds[/b].
Balls will keep spawning* until the game ends. So stay on your toes!"
fit_content = true

[node name="Text3" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "[i]* The win condition, maximum number of balls and various other game parameters can be configured in [b]Settings[/b].[/i]"
fit_content = true

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.51
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
text = "CONTROLS"
horizontal_alignment = 1

[node name="VBoxContainer1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2"]
layout_mode = 2

[node name="Text1" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer1"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "[b][u]PLAYER 1[/u][/b]"
fit_content = true

[node name="GridContainer1er" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer1"]
layout_mode = 2
columns = 2

[node name="Text1" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer1/GridContainer1er"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "Move Up:"
fit_content = true
vertical_alignment = 1

[node name="Text2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer1/GridContainer1er"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "[img]res://menus/help/assets_textures/keyboard_w.svg[/img] / [img]res://menus/help/assets_textures/keyboard_a.svg[/img]"
fit_content = true

[node name="Text3" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer1/GridContainer1er"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
text = "Move Down:"
fit_content = true
vertical_alignment = 1

[node name="Text4" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer1/GridContainer1er"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "[img]res://menus/help/assets_textures/keyboard_s.svg[/img] / [img]res://menus/help/assets_textures/keyboard_d.svg[/img]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2"]
layout_mode = 2

[node name="Text2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_h10xx")
bbcode_enabled = true
text = "[b][u]PLAYER 2[/u][/b]"
fit_content = true

[node name="GridContainer1er2" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Text1" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer/GridContainer1er2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "Move Up:"
fit_content = true
vertical_alignment = 1

[node name="Text2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer/GridContainer1er2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "[img]res://menus/help/assets_textures/keyboard_arrow_up.svg[/img] / [img]res://menus/help/assets_textures/keyboard_arrow_left.svg[/img]"
fit_content = true

[node name="Text3" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer/GridContainer1er2"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
text = "Move Down:"
fit_content = true
vertical_alignment = 1

[node name="Text4" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BasicsContainer/VBoxContainer2/VBoxContainer/GridContainer1er2"]
layout_mode = 2
theme = ExtResource("8_bs6y8")
bbcode_enabled = true
text = "[img]res://menus/help/assets_textures/keyboard_arrow_down.svg[/img] / [img]res://menus/help/assets_textures/keyboard_arrow_right.svg[/img]"
fit_content = true

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_top = NodePath("../PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightButton")
theme = ExtResource("2_acsg6")
text = "BACK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
